# time-of-day-wallpapers

./: Cargo.toml  README.md  config.example.toml
src/: config.rs  main.rs
